# PreventSleep

./: .gitignore  .pre-commit-config.yaml  README.md  funcs.py  main.py  move.py  pyproject.toml
src/: __init__.py  activity_detectors.py  helpers.py
